gcc/testsuite/gdc.test/compilable/dotvar_ref_return.d
// REQUIRED_ARGS: -inline

struct Foo
{
    int x;
    int foo()
    {
        ref get() { return x; }
        return get();
    }
}
